change styles more user-friendly

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ a {
 a:hover,
 a:active,
 a:focus {
-    color: #EF233C;
+    color: hsla(224, 100%, 66%, 0.678);
     outline: none;
     text-decoration: none;
 }
@@ -45,20 +45,20 @@ a:focus {
     font-weight: 600;
     letter-spacing: 1px;
     color: #ffffff;
-    background: #EF233C;
+    background: hsla(224, 100%, 66%, 0.678);
     border: 2px solid transparent;
     border-radius: 0;
-    box-shadow: inset 0 0 0 50px #EF233C;
+    box-shadow: inset 0 0 0 50px hsla(224, 100%, 66%, 0.678);
     transition: ease-out 0.3s;
     -webkit-transition: ease-out 0.3s;
     -moz-transition: ease-out 0.3s;
 }
 
 .btn:hover {
-    color: #EF233C;
+    color: hsla(224, 100%, 66%, 0.678);
     background: transparent;
-    box-shadow: inset 0 0 0 0 #EF233C;
-    border-color: #EF233C;
+    box-shadow: inset 0 0 0 0 hsla(224, 100%, 66%, 0.678);
+    border-color: hsla(224, 100%, 66%, 0.678);
 }
 
 #loader {
@@ -92,7 +92,7 @@ a:focus {
     width: 45px;
     height: 45px;
     border: 5px solid #dddddd;
-    border-top: 5px solid #EF233C;
+    border-top: 5px solid hsla(224, 100%, 66%, 0.678);
     border-radius: 50%;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
@@ -189,7 +189,7 @@ a:focus {
     }
     
     .navbar.nav-sticky .navbar-brand {
-        color: #EF233C;
+        color: hsla(224, 100%, 66%, 0.678);
     }
 
     .navbar-light .navbar-nav .nav-link,
@@ -212,7 +212,7 @@ a:focus {
     
     .navbar-light.nav-sticky .navbar-nav .nav-link:hover,
     .navbar-light.nav-sticky .navbar-nav .nav-link.active {
-        color: #EF233C;
+        color: hsla(224, 100%, 66%, 0.678);
     }
 }
 
@@ -223,7 +223,7 @@ a:focus {
     }
     
     .navbar .navbar-brand {
-        color: #EF233C;
+        color: hsla(224, 100%, 66%, 0.678);
     }
     
     .navbar .navbar-nav {
@@ -249,7 +249,7 @@ a:focus {
     margin-bottom: 45px;
     padding: 120px 0 0 0;
     overflow: hidden;
-    background: linear-gradient(rgba(239, 35, 60, .95), rgba(239, 35, 60, .95)), url(../img/hero-bg.jpg);
+    background: linear-gradient(hsla(224, 100%, 66%, 0.678), hsla(224, 100%, 66%, 0.678)), url(../img/hero-bg.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -315,7 +315,7 @@ a:focus {
 
 .hero .hero-btn .btn {
     margin-top: 35px;
-    color: #EF233C;
+    color: hsla(224, 100%, 66%, 0.678);
     background: #ffffff;
     box-shadow: inset 0 0 0 50px #ffffff;
 }
@@ -440,7 +440,6 @@ a:focus {
     top: 11px;
     right: 0;
     left: -30px;
-    background: #EF233C;
     z-index: -1;
 }
 
@@ -451,7 +450,7 @@ a:focus {
     height: 3px;
     top: 11px;
     left: 3px;
-    background: #EF233C;
+    background: hsla(224, 100%, 66%, 0.678);
     z-index: 1;
 }
 
@@ -533,7 +532,7 @@ a:focus {
 
 .about .progress .progress-bar {
     width: 0px;
-    background: #EF233C;
+    background: hsla(224, 100%, 66%, 0.678);
     border-radius: 10px;
     transition: 2s;
 }
@@ -566,7 +565,7 @@ a:focus {
     content: '';
     position: absolute;
     width: 2px;
-    background: #EF233C;
+    background: hsla(224, 100%, 66%, 0.678);
     top: 0;
     bottom: 0;
     left: 50%;
@@ -598,7 +597,7 @@ a:focus {
     top: 48px;
     right: -8px;
     background: #ffffff;
-    border: 2px solid #EF233C;
+    border: 2px solid hsla(224, 100%, 66%, 0.678);
     border-radius: 16px;
     z-index: 1;
 }
@@ -630,7 +629,7 @@ a:focus {
     top: 44px;
     font-size: 16px;
     font-weight: 600;
-    color: #EF233C;
+    color: hsla(224, 100%, 66%, 0.678);
     text-transform: uppercase;
     letter-spacing: 1px;
     z-index: 1;
@@ -744,7 +743,7 @@ a:focus {
 }
 
 .service .service-item:hover {
-    box-shadow: inset 800px 0 0 0 #EF233C;
+    box-shadow: inset 800px 0 0 0 hsla(224, 100%, 66%, 0.678);
 }
 
 .service .service-icon {
@@ -754,14 +753,14 @@ a:focus {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid #EF233C;
+    border: 1px solid hsla(224, 100%, 66%, 0.678);
     background: #ffffff;
 }
 
 .service .service-icon i {
     position: relative;
     font-size: 60px;
-    color: #EF233C;
+    color: hsla(224, 100%, 66%, 0.678);
     transition: .3s;
 }
 
@@ -829,10 +828,10 @@ a:focus {
     font-size: 14px;
     font-weight: 600;
     color: #ffffff;
-    background: #EF233C;
+    background: hsla(224, 100%, 66%, 0.678);
     border: 2px solid transparent;
     border-radius: 0;
-    box-shadow: inset 0 0 0 50px #EF233C;
+    box-shadow: inset 0 0 0 50px hsla(224, 100%, 66%, 0.678);
     transition: ease-out 0.3s;
     -webkit-transition: ease-out 0.3s;
     -moz-transition: ease-out 0.3s;
@@ -840,10 +839,10 @@ a:focus {
 
 .portfolio #portfolio-filter li:hover,
 .portfolio #portfolio-filter li.filter-active {
-    color: #EF233C;
+    color: hsla(224, 100%, 66%, 0.678);
     background: transparent;
-    box-shadow: inset 0 0 0 0 #EF233C;
-    border-color: #EF233C;
+    box-shadow: inset 0 0 0 0 hsla(224, 100%, 66%, 0.678);
+    border-color: hsla(224, 100%, 66%, 0.678);
 }
 
 .portfolio .portfolio-item {
@@ -906,10 +905,10 @@ a:focus {
 }
 
 .portfolio .portfolio-item:hover a.btn {
-    color: #EF233C;
+    color: hsla(224, 100%, 66%, 0.678);
     background: transparent;
-    box-shadow: inset 0 0 0 0 #EF233C;
-    border-color: #EF233C;
+    box-shadow: inset 0 0 0 0 hsla(224, 100%, 66%, 0.678);
+    border-color: hsla(224, 100%, 66%, 0.678);
 }
 
 
@@ -921,7 +920,7 @@ a:focus {
     width: 100%;
     margin: 45px 0;
     padding: 90px 0;
-    background: #EF233C;
+    background: hsla(224, 100%, 64%, 0.692);
 }
 
 .banner .container {
@@ -958,7 +957,7 @@ a:focus {
 
 .banner .banner-text .btn {
     margin-top: 15px;
-    color: #EF233C;
+    color: hsla(224, 100%, 66%, 0.678);
     background: #ffffff;
     box-shadow: inset 0 0 0 50px #ffffff;
 }
@@ -1012,7 +1011,7 @@ a:focus {
 }
 
 .price .price-item.featured-item .price-header {
-    color: #EF233C;
+    color: hsla(224, 100%, 66%, 0.678);
 }
 
 .price .price-title h2 {
@@ -1042,7 +1041,7 @@ a:focus {
 }
 
 .price .price-item.featured-item h2 {
-    color: #EF233C;
+    color: hsla(224, 100%, 66%, 0.678);
 }
 
 .price .price-body {
@@ -1078,15 +1077,15 @@ a:focus {
 
 .price .price-item.featured-item .price-action .btn {
     color: #ffffff;
-    background: #EF233C;
-    box-shadow: inset 0 0 0 50px #EF233C;
+    background: hsla(224, 100%, 66%, 0.678);
+    box-shadow: inset 0 0 0 50px hsla(224, 100%, 66%, 0.678);
 }
 
 .price .price-item.featured-item .price-action .btn:hover {
-    color: #EF233C;
+    color: hsla(224, 100%, 66%, 0.678);
     background: transparent;
-    box-shadow: inset 0 0 0 0 #EF233C;
-    border-color: #EF233C;
+    box-shadow: inset 0 0 0 0 hsla(224, 100%, 66%, 0.678);
+    border-color: hsla(224, 100%, 66%, 0.678);
 }
 
 
@@ -1129,7 +1128,7 @@ a:focus {
 }
 
 .team .team-text h2 {
-    color: #EF233C;
+    color: hsla(224, 100%, 66%, 0.678);
     font-size: 18px;
     font-weight: 600;
     margin-bottom: 5px;
@@ -1168,7 +1167,7 @@ a:focus {
 }
 
 .team .team-item:hover {
-    box-shadow: inset 800px 0 0 0 #EF233C;
+    box-shadow: inset 800px 0 0 0 hsla(224, 100%, 66%, 0.678);
 }
 
 .team .team-item:hover .team-img img {
@@ -1218,7 +1217,7 @@ a:focus {
     position: relative;
     margin: 45px 0;
     padding: 90px 0;
-    background: #EF233C;
+    background: hsla(224, 100%, 64%, 0.692);
 }
 
 .testimonial .container {
@@ -1270,7 +1269,7 @@ a:focus {
 }
 
 .testimonial .testimonial-text h3 {
-    color: #EF233C;
+    color: hsla(224, 100%, 66%, 0.678);
     font-size: 18px;
     font-weight: 600;
     margin-bottom: 10px;
@@ -1308,7 +1307,7 @@ a:focus {
     position: relative;
     width: 100%;
     margin: 45px 0;
-    background: #EF233C;
+    background: hsla(224, 100%, 64%, 0.692);
 }
 
 .contact .container-fluid {
@@ -1319,7 +1318,6 @@ a:focus {
 .contact .contact-form {
     position: relative;
     padding: 90px 0 90px 45px;
-    background: #EF233C;
 }
 
 .contact .contact-form input {
@@ -1353,7 +1351,7 @@ a:focus {
 
 .contact .contact-form .btn {
     margin-top: 35px;
-    color: #EF233C;
+    color: hsla(224, 100%, 64%, 0.692);
     background: #ffffff;
     box-shadow: inset 0 0 0 50px #ffffff;
 }
@@ -1467,7 +1465,7 @@ a:focus {
 .footer {
     position: relative;
     margin-top: 45px;
-    background: #EF233C;
+    background: hsla(224, 100%, 64%, 0.692);
 }
 
 .footer .container-fluid {
